# fxTap

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md  fxconv-meta-to-header.py  generate-cmake-build-release.sh
assets-fx/: fxconv-metadata.txt
include/: assets.h  fxconv-assets.h  settings.h  ui.h
include/utils/: keycode.h
src/: UI_About.c  UI_Error_FxtapFolderEmpty.c  UI_Error_FxtapFolderNotFound.c  UI_KeyTest.c  UI_MainMenu.c  UI_Play.c  UI_SelectSong.c  UI_Settings.c  fxconv-assets.h  main.c  router.h
src/routes/: +page.c
src/routes/about/: +page.c
src/routes/key-test/: +page.c
src/routes/main-menu/: +page.c
src/routes/play/: +page.c
src/routes/play/detail/: +page.c
src/routes/play/from-list/: +page.c
src/routes/play/from-path/: +page.c  getkey-alpha-lock.c  getkey-alpha-lock.h
src/routes/play/mods/: +page.c
src/routes/select-song/: +page.c  getkey-alpha-lock.c
src/routes/settings/: +page.c  custom-overall-difficulty.c  key-binding-style.c  key-bindings.c  language.c  note-appearance.c  notes-falling-time.c
src/settings/: key-binding-style.c  key-bindings.c  language.c  note-appearance.c  notes-falling-time.c
src/ui/: about.c  error-fxtap-folder-empty.c  error-fxtap-folder-not-found.c  key-test.c  main-menu.c  play.c  select-song.c  settings.c
src/utils/: keycode.c
